ID-kaardiga: konteiner loodud

--- a/static/index.html
+++ b/static/index.html
@@ -37,18 +37,14 @@
 
     <p>Sisesta allkirjastatav tekst:</p>
     <!-- Tekstisisestusala -->
-    <div id='Tekst' contenteditable='true' spellcheck='false'>
+    <div id='Tekstisisestusala' contenteditable='true' spellcheck='false'>
     </div>
 
     <!-- Nuppude ala -->
     <p id='Tekstitootlus'>
-      <span id='Allkirjastanupp' class='nupp disabled' title='Allkirjasta'>
+      <span id='Allkirjastanupp' class='nupp' title='Allkirjasta'>
         <i class="ikoon material-icons green">verified</i>
       </span>
-
-      <span id='Uusnupp' class='nupp disabled' title='Alusta uut'>
-        <i class="ikoon material-icons tomato">clear</i>
-      </span>  
 
       <span id='Koodnupp' class='nupp' title='Lähtekood'>
         <i class="ikoon material-icons">code</i>
