--- a/static/index.html
+++ b/static/index.html
@@ -52,6 +52,10 @@
       <div id='mIDNupp' class='tekstinupp'>
         Allkirjasta m-ID-ga
       </div>
+
+      <div id='laeAllaNupp' class='tekstinupp disabled'>
+        Lae allkirjastatud fail alla 
+      </div>
     </div>
 
     <!-- Teatepaan -->
